Add support VM options on test env