@@ -56,4 +56,7 @@ tasks.withType<KotlinCompile> {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+	jvmArgs(
+		"--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+	)
 }
